--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,9 +22,17 @@ classifiers = [
 ]
 requires-python = ">=3.8"
 # Declare any run-time dependencies that should be installed with the package.
-#dependencies = [
-#    "importlib-resources;python_version<'3.10'",
-#]
+dependencies = [
+    "scikit-learn",
+    "pylcs",
+]
+
+EXTRAS_REQUIRE = {
+    "we": ['westpa >= 2022.03'],
+    "ray": ['ray']
+}
+
+EXTRAS_REQUIRE['all'] = EXTRAS_REQUIRE["we"] + EXTRAS_REQUIRE["ray"]
 
 # Update the urls once the hosting is set up.
 #[project.urls]
