--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -2,12 +2,17 @@ name: test
 channels:
 
   - conda-forge
-
   - defaults
 dependencies:
     # Base depends
   - python
+  - westpa>=2022.03
+  - scikit-learn
   - pip
+  - pip:
+    - pylcs
+    - ray
+
 
     # Testing
   - pytest
