entry_point to discretize as w_discretize

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,3 +20,7 @@ max-line-length = 119
 
 [aliases]
 test = pytest
+
+[options.entry_points]
+console_scripts =
+    w_discretize = w_pathways.discretize:entry_point
