--- a/setup.cfg
+++ b/setup.cfg
@@ -23,4 +23,4 @@ test = pytest
 
 [options.entry_points]
 console_scripts =
-    w_discretize = w_pathways.discretize:entry_point
+    w_extract = w_pathways.extract:entry_point
