Revert so not using a class object for argparser

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,3 +24,4 @@ test = pytest
 [options.entry_points]
 console_scripts =
     w_extract = w_pathways.extract:entry_point
+    w_discretize = w_pathways.discretize:entry_point
