--- a/setup.cfg
+++ b/setup.cfg
@@ -25,3 +25,4 @@ test = pytest
 console_scripts =
     w_extract = w_pathways.extract:entry_point
     w_discretize = w_pathways.discretize:entry_point
+    w_match = w_pathways.match:entry_point
