--- a/setup.cfg
+++ b/setup.cfg
@@ -26,3 +26,4 @@ console_scripts =
     w_extract = w_pathways.extract:entry_point
     w_discretize = w_pathways.discretize:entry_point
     w_match = w_pathways.match:entry_point
+    w_all = w_pathways.all:entry_point
