--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ omit =
     # Omit the tests
     */tests/*
     # Omit generated versioneer
-    w_pathways/_version.py
+    mphat/_version.py
 
 [yapf]
 # YAPF, in .style.yapf files this shows up as "[style]" header
@@ -23,7 +23,7 @@ test = pytest
 
 [options.entry_points]
 console_scripts =
-    w_extract = w_pathways.extract:entry_point
-    w_discretize = w_pathways.discretize:entry_point
-    w_match = w_pathways.match:entry_point
-    w_all = w_pathways.all:entry_point
+    w_extract = mphat.extract:entry_point
+    w_discretize = mphat.discretize:entry_point
+    w_match = mphat.match:entry_point
+    w_all = mphat.all:entry_point
