--- a/.gitignore
+++ b/.gitignore
@@ -101,6 +101,9 @@ ENV/
 # mypy
 .mypy_cache/
 
+# PyCharm/idea stuff
+.idea
+
 # profraw files from LLVM? Unclear exactly what triggers this
 # There are reports this comes from LLVM profiling, but also Xcode 9.
 *profraw
