update codecov and docs

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -59,6 +59,9 @@ jobs:
       - name: CodeCov
         uses: codecov/codecov-action@v3
         with:
+          token: ${{ secrets.CODECOV_TOKEN }} 
           file: ./coverage.xml
           flags: unittests
           name: codecov-${{ matrix.os }}-py${{ matrix.python-version }}
+          fail_ci_if_error: false
+          verbose: false
