--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -59,7 +59,7 @@ jobs:
       - name: CodeCov
         uses: codecov/codecov-action@v3
         with:
-          token: ${{ secrets.CODECOV_TOKEN }} 
+          # token: ${{ secrets.CODECOV_TOKEN }} # Not needed for Public Repos
           file: ./coverage.xml
           flags: unittests
           name: codecov-${{ matrix.os }}-py${{ matrix.python-version }}
