Update everything, including documentations

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,4 +26,4 @@ console_scripts =
     w_extract = mphat.extract:entry_point
     w_discretize = mphat.discretize:entry_point
     w_match = mphat.match:entry_point
-    w_all = mphat.all:entry_point
+    w_all = mphat.mphat:entry_point
