Swap to Subcommand and subparsers.

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,4 @@ test = pytest
 
 [options.entry_points]
 console_scripts =
-    w_extract = mphat.extract:entry_point
-    w_discretize = mphat.discretize:entry_point
-    w_match = mphat.match:entry_point
-    w_all = mphat.mphat:entry_point
+    mphat = mphat.mphat:entry_point
