--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ omit =
     # Omit the tests
     */tests/*
     # Omit generated versioneer
-    mphat/_version.py
+    lpath/_version.py
 
 [yapf]
 # YAPF, in .style.yapf files this shows up as "[style]" header
@@ -23,4 +23,4 @@ test = pytest
 
 [options.entry_points]
 console_scripts =
-    mphat = mphat.mphat:entry_point
+    lpath = lpath.lpath:entry_point
