--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ INDENT_WIDTH = 4
 USE_TABS = False
 
 [flake8]
-# Flake8, PyFlakes, etc
+# Flake8packages=, PyFlakes, etc
 max-line-length = 119
 
 [aliases]
