--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: westpa-lpath
+name: lpath
 channels:
     - conda-forge
     - defaults
@@ -12,3 +12,4 @@ dependencies:
     - pip:
         - pylcs
         - ray
+        - .
