--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -3,13 +3,9 @@
 version: 2
 
 build:
-  image: latest
-
-python:
-  version: 3.8
-  install:
-    - method: pip
-      path: .
+  os: "ubuntu-22.04"
+  tools:
+    python: "mambaforge-4.10"
 
 conda:
   environment: devtools/conda-envs/environment-rtd.yml
