--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -7,5 +7,10 @@ build:
   tools:
     python: "mambaforge-4.10"
 
+python:
+  install:
+    - method: pip
+      path: .
+
 conda:
   environment: devtools/conda-envs/environment-rtd.yml
