--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ omit =
 
 [yapf]
 # YAPF, in .style.yapf files this shows up as "[style]" header
-COLUMN_LIMIT = 119
+COLUMN_LIMIT = 119l
 INDENT_WIDTH = 4
 USE_TABS = False
 
