--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,10 +24,13 @@ requires-python = ">=3.8"
 # Declare any run-time dependencies that should be installed with the package.
 dependencies = [
     "scikit-learn",
+    "scipy",
+    "numpy",
     "pylcs",
     "ray",
     "tqdm",
     "networkx",
+    "matplotlib",
     "importlib-resources;python_version<'3.10'"
 ]
 
