--- a/devtools/conda-envs/environment-rtd.yml
+++ b/devtools/conda-envs/environment-rtd.yml
@@ -18,6 +18,7 @@ dependencies:
     - pip:
         - pylcs
         - ray
+        - timedinput
         - recommonmark
         - readthedocs-sphinx-ext
 
