--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "tqdm",
     "networkx",
     "matplotlib",
+    "timedinput",
     "importlib-resources;python_version<'3.10'"
 ]
 
