--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,9 +48,11 @@ test = [
 westpa = [
     "westpa>=2022.03"
 ]
-
+tui = [
+    "argparse-tui"
+]
 dev = [
-    "lpath[test,westpa]"
+    "lpath[test,westpa,tui]"
 ]
 
 [tool.setuptools]
