--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,37 +16,68 @@ on:
     types:
       - published
 
-
 jobs:
   build_wheels:
     name: Build wheels
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+ 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.15.0
-        env:
-          CIBW_TEST_COMMAND: >
-            python -c "import lpath; print(lpath.__version__)" &&
-            python -c "import lpath.discretize" &&
-            python -c "import lpath.extract" &&
-            python -c "import lpath.match" &&
-            python -c "import lpath.lpath" &&
-            echo "All done with import tests!"
+        run: |
+          git pull --tags origin main &&
+          python -m pip install --upgrade pip &&
+          python -m pip install build &&
+          python -m build --wheel
+
+      - name: Install from wheels and import
+        run: |
+          python -m pip install dist/*.whl && 
+          python -c "import lpath; print(lpath.__version__)" &&
+          python -c "import lpath.discretize" &&
+          python -c "import lpath.extract" &&
+          python -c "import lpath.match" &&
+          python -c "import lpath.lpath" &&
+          echo "All done with import tests!"
 
       - uses: actions/upload-artifact@v3
         with:
-          path: ./wheelhouse/*.whl
+          path: dist/*.whl
 
   build_sdist:
     name: Build source distribution
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+ 
       - name: Build sdist
-        run: pipx run build --sdist
+        run: |
+          git pull --tags origin main &&
+          python -m pip install --upgrade pip &&
+          python -m pip install build &&
+          python -m build --sdist
+
+      - name: Install from sdist and import
+        run: |
+          python -m pip install dist/*.tar.gz && 
+          python -c "import lpath; print(lpath.__version__)" &&
+          python -c "import lpath.discretize" &&
+          python -c "import lpath.extract" &&
+          python -c "import lpath.match" &&
+          python -c "import lpath.lpath" &&
+          echo "All done with import tests!"
 
       - uses: actions/upload-artifact@v3
         with:
