--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -26,6 +26,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Additional info about the build
         shell: bash
