--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 lpath/_version.py export-subst
+examples/WE/multi.h5 filter=lfs diff=lfs merge=lfs -text
+examples/cMD/phi_psi.npy filter=lfs diff=lfs merge=lfs -text
