--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -49,6 +49,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           path: dist/*.whl
+          overwrite: true
 
   build_sdist:
     name: Build source distribution
@@ -82,6 +83,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           path: dist/*.tar.gz
+          overwrite: true
 
   upload_pypi:
     needs: [build_wheels, build_sdist]
@@ -99,6 +101,7 @@ jobs:
           # if `name: artifact` is omitted, the action will create extra parent dir
           name: artifact
           path: dist
+          merge-multiple: true
 
       - name: Publish distribution 📦 to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
