--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,6 +17,26 @@ on:
       - published
 
 jobs:
+  build_wheels2:
+    name: Build wheels
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+ 
+      - run: touch test.whl
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: artifact-wheels
+          path: *.whl
+          overwrite: true
+
   build_wheels:
     name: Build wheels
     runs-on: ubuntu-latest
@@ -86,6 +106,25 @@ jobs:
           name: artifact-sdist
           path: dist/*.tar.gz
           overwrite: true
+
+  test-download:
+    needs: [build_wheels, build_sdist, build_wheels2]
+    runs-on: ubuntu-latest
+    environment: pypi
+    permissions:
+      id-token: write
+    # or, alternatively, upload to PyPI on every tag starting with 'v' (remove on: release above to use this)
+    # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          # unpacks default artifact into dist/
+          # if `name: artifact` is omitted, the action will create extra parent dir
+          name: artifact-*
+          path: dist
+          merge-multiple: true
+
+      - run: `ls`
 
   upload_pypi:
     needs: [build_wheels, build_sdist]
