--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -123,7 +123,7 @@ jobs:
           path: dist
           merge-multiple: true
 
-      - run: `ls`
+      - run: ls -l dist
 
   upload_pypi:
     needs: [build_wheels, build_sdist]
