--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,11 +29,12 @@ jobs:
         with:
           python-version: '3.10'
  
-      - run: touch test.whl
+      - run: touch dist/test.whl
 
       - uses: actions/upload-artifact@v4
         with:
           name: artifact-wheels
+          path: dist/*.whl
           overwrite: true
 
   build_wheels:
