--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,7 +18,7 @@ on:
 
 jobs:
   build_wheels2:
-    name: Build wheels
+    name: Build wheels 2
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -29,12 +29,14 @@ jobs:
         with:
           python-version: '3.10'
  
-      - run: touch dist/test.whl
+      - run: |
+          mkdir dist &&
+          touch dist/test.whl
 
       - uses: actions/upload-artifact@v4
         with:
           name: artifact-wheels
-          path: dist/*.whl
+          path: test/*.whl
           overwrite: true
 
   build_wheels:
