--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,7 +36,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: artifact-wheels
-          path: test/*.whl
+          path: dist/*.whl
           overwrite: true
 
   build_wheels:
@@ -122,7 +122,8 @@ jobs:
         with:
           # unpacks default artifact into dist/
           # if `name: artifact` is omitted, the action will create extra parent dir
-          name: artifact-*
+          name: artifact
+          pattern: artifact-*
           path: dist
           merge-multiple: true
 
@@ -142,7 +143,7 @@ jobs:
         with:
           # unpacks default artifact into dist/
           # if `name: artifact` is omitted, the action will create extra parent dir
-          name: artifact-*
+          pattern: artifact-*
           path: dist
           merge-multiple: true
 
