--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -63,9 +63,11 @@ jobs:
       - name: CodeCov
         uses: codecov/codecov-action@v4
         with:
-          # token: ${{ secrets.CODECOV_TOKEN }} # Not needed for Public Repos
           file: ./coverage.xml
           flags: unittests
           name: codecov-${{ matrix.os }}-py${{ matrix.python-version }}
           fail_ci_if_error: false
           verbose: false
+        env:
+          token: ${{ secrets.CODECOV_TOKEN }} # Not needed for Public Repos
+
