--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,7 @@ channels:
     - conda-forge
     - defaults
 dependencies:
-    - python<3.11
+    - python<=3.11
     - westpa>=2022.03
     - scikit-learn
     - matplotlib
