--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,7 @@ dependencies:
     - python<3.12
     - westpa>=2022.03
     - scikit-learn
-    - matplotlib
+    - matplotlib>=3.6.0
     - tqdm
     - networkx
     - pip
