--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
 filterwarnings = 
     ignore:.*invalid escape sequence.*:SyntaxWarning
+    ignore:.*invalid escape sequence.*:DeprecationWarning
