--- a/devtools/conda-envs/environment-rtd.yml
+++ b/devtools/conda-envs/environment-rtd.yml
@@ -3,7 +3,7 @@ channels:
     - conda-forge
     - defaults
 dependencies:
-    - python<3.12
+    - python
     - westpa>=2022.03
     - scikit-learn
     - tqdm
