--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,6 +1,9 @@
 # .readthedocs.yml
 
 version: 2
+sphinx:
+  # Path to Sphinx configuration file.
+  configuration: docs/conf.py
 
 build:
   os: "ubuntu-22.04"
